syntax="proto2";
package gsp;

option java_package="com.gproject.common.dto.proto";
option java_outer_classname="ItemDTO";

//属性物品，不属于背包
message ClientAttarItem{
  required  int32 itemId=1;
  optional  int64 addNum=2;//获得多少物品
  optional  bool  canShow=3;//是否需要被玩家看到
  required  int64 lastNum=4;//最终数值
}
//专用用于展示获得物品,不属于背包
message S2CAddItem{
  repeated  ClientAttarItem  data=1;
}

//专门用于消耗物品后，同步客户端数值
message S2CSynClientAttarItem{
     repeated  ClientAttarItem  data=1;
}

//背包物品
message BagItem{
   required  int32 itemId=1;
   required  int32 bagId=2;//
   optional  int64 addNum=3;//获得多少物品
  optional  bool  canShow=4;//是否需要被玩家看到
  required  int64 lastNum=5;//最终数值
}
//专门用于展示背包获得物品
message S2CAddBagItem{
     repeated  ClientAttarItem  data=1;
}

//专门用于消耗物品后，同步客户端数值,背包类型
message S2CSynBagItem{
     repeated  BagItem  data=1;
}

